--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
     name: Build Gitbook
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       # Check out the repo first
       - name: Checkout code
